# adventure-engine

./: Doxyfile  Makefile  README.md  readme.txt
examples/exampleGame/saves/: game_save.json
examples/exampleGameSK/: commands.json  game-setup.json  main-character.json  types-and-attributes.json
examples/exampleGameSK/events/: combat.json
examples/exampleGameSK/inventory/: main-character-storage.json
examples/exampleGameSK/rooms/: room-1.json
examples/exampleGameSK/saves/: game_save.json
src/: CMakeLists.txt  Game.cpp  Game.h  Room.cpp  Room.h  main.cpp
src/Events/: StagesUpdatesEvent.cpp  StagesUpdatesEvent.h
src/GameEntity/: CombatStats.h  GameEntity.cpp  GameEntity.h  GameObject.cpp  GameObject.h  MainCharacter.cpp  MainCharacter.h  NPC.cpp  NPC.h
src/Inventory/: InventoryStorage.cpp  InventoryStorage.h  Storage.cpp  Storage.h
src/Tests/: tests.cpp  tests.h
src/Tests/TestExamples/invalidCommand/: commands.json  types-and-attributes.json
src/Tests/TestExamples/invalidCommand/events/: stages-updates.json
src/Tests/TestExamples/invalidFileMissing/: commands.json
src/Tests/TestExamples/invalidFileMissing/rooms/: room-1.json
src/Tests/TestExamples/invalidTypes/: game-setup.json  types-and-attributes.json
src/Tests/TestExamples/invalidTypes/rooms/: room-2.json
src/Tests/TestExamples/valid/inventory/: main-character-storage.json
src/TypeAndAttribute/: Attribute.cpp  Attribute.h  MainCharacterType.cpp  MainCharacterType.h
src/Util/: IO.cpp  IO.h  Reader.cpp  Reader.h  Texts.h
